fixed horizontal scroll on iphones

--- a/styles/sass/partials/_general.scss
+++ b/styles/sass/partials/_general.scss
@@ -28,6 +28,10 @@ a {
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+}
+
+html,
+body {
     overflow-x: hidden;
 }
 
