--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,6 +252,10 @@ a {
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+}
+
+html,
+body {
   overflow-x: hidden;
 }
 
